# phenio-toolkit

./: .cruft.json  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
docs/: conf.py  index.rst
src/phenio_toolkit/: __init__.py  cli.py  phenio_cli.py
src/phenio_toolkit/mapping/: lexical_mapping.py
src/phenio_toolkit/notebooks/: lexical_mapping.ipynb
tests/: __init__.py
